# monorepo-bazel-rust

./: .gitignore  BUILD.bazel  Cargo.toml  NOTEBOOK.md  README.md  RESOURCES.md  TODO.fix-no-external-crate-greeter  WORKSPACE  bazel-bin  bazel-monorepo-bazel-rust  bazel-out  bazel-testlogs  cargo-bazel-lock.json
crates/greeter/greeter/: BUILD.bazel  BUILD.bzl
crates/greeter/greeter-grpc/: BUILD.bazel  BUILD.bzl  Cargo.toml
crates/greeter/greeter-grpc/src/: main.rs
crates/greeter/greeter/src/: lib.rs  main.rs
crates/greeter/greeter/src/internal/: mod.rs
crates/hello-grpc/: Cargo.toml  build.rs
crates/hello-grpc/src/: main.rs
